data/raw_logs/syntactic/syn_18.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c:1:26: warning: excess elements in scalar initializer
    1 | int main() { int x = {1, 2; }
      |                          ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c:1:26: note: (near initialization for 'x')
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c:1:27: error: expected '}' before ';' token
    1 | int main() { int x = {1, 2; }
      |                      ~    ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c:1:1: error: expected ',' or ';' at end of input
    1 | int main() { int x = {1, 2; }
      | ^~~
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_18.c:1:1: error: expected declaration or statement at end of input
